Fix the scrollbar issue

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -178,7 +178,7 @@
         z-index: 999999;
         top: 0;
         left: 0;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         background: rgba($color-primary, 0.98);
         backdrop-filter: blur(5px);
