--- a/_sass/_spotlight.scss
+++ b/_sass/_spotlight.scss
@@ -99,7 +99,8 @@
     .spot {
       .content {
         img {
-          min-width: 100vw;
+          width: 100%;
+          max-width: 100%;
         }
       }
     }
